* 2005-07-19 Jeremy Sanders <jeremy@jeremysanders.net>
	- Document FITS import and 2D dataset commands
	
* 2005-07-18 Jeremy Sanders <jeremy@jeremysanders.net>
	- Make area around key smaller if no border
	
* 2005-07-17 Jeremy Sanders <jeremy@jeremysanders.net>
	- Handle axis with max < min (reversed)
	- Get RA WCS correct on FITS import
	
* 2005-07-12 Jeremy Sanders <jeremy@jeremysanders.net>
	- Provide other parts of dataset in data create dialog
	
* 2005-07-11 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add patch by James Graham to add the correct extension to
	an exported file if it is not given (slightly modified)
	
* 2005-07-10 Jeremy Sanders <jeremy@jeremysanders.net>
	- FITS dialog finished
	- FITS data can be linked to files
	- ImportFITSFile added to command interface
	- Linking works for datasets, and added various options to 
	ImportFile2D
	
* 2005-07-05 Jeremy Sanders <jeremy@jeremysanders.net>
	- Start FITS import dialog
	
* 2005-07-03 Jeremy Sanders <jeremy@jeremysanders.net>
	- 2D data import dialog
	- Improvements to 1D data import dialog
	
* 2005-07-02 Jeremy Sanders <jeremy@jeremysanders.net>
	- 2D datasets can be saved
	- 2D datasets can be imported
	
* 2005-06-28 Jeremy Sanders <jeremy@jeremysanders.net>
	- Further Image support

* 2005-06-26 Jeremy Sanders <jeremy@jeremysanders.net>
	- Initial Image support (not yet working)

* 2005-06-21 Jeremy Sanders <jeremy@jeremysanders.net>
	- Slight changes to doc eps/png generation logic
	
* 2005-06-18 Jeremy Sanders <jeremy@jeremysanders.net>
	- Enable key length of line to be changed
	- Put a comment in blank __init__.py files to support windows
	unzip tools
	
* 2005-06-17 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix bug with unfilled symbols on key
	
* 2005-06-16 Jeremy Sanders <jeremy@jeremysanders.net>
	- Provide fit outExpr setting, giving output expression as text
	- Fix error symmetrising for asymmetric errors
	- Better button behaviour for editing text popup
	